--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,27 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.pyskacz.android.myexpenses"
-        minSdkVersion 23
+        minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
+
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
 }
 
@@ -28,4 +38,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'com.google.inject:guice:4.2.2'
+    implementation ('com.github.SUPERCILEX.poi-android:poi:3.17'){
+        exclude module: 'stax2-api-4.1'
+    }
+    compileOnly 'org.projectlombok:lombok:1.18.12'
 }
