--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'com.google.inject:guice:4.2.2'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0-SNAPSHOT"
     implementation ('com.github.SUPERCILEX.poi-android:poi:3.17'){
         exclude module: 'stax2-api-4.1'
     }
