--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://oss.jfrog.org/libs-snapshot' }GO
+        maven { url 'https://oss.jfrog.org/libs-snapshot' }
     }
 }
 
